--- a/HCAN.csproj
+++ b/HCAN.csproj
@@ -47,17 +47,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CANController.cs" />
-    <Compile Include="Main.cs">
+    <Compile Include="CANTool.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main.Designer.cs">
-      <DependentUpon>Main.cs</DependentUpon>
+    <Compile Include="CANTool.Designer.cs">
+      <DependentUpon>CANTool.cs</DependentUpon>
     </Compile>
     <Compile Include="PCANBasic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Main.resx">
-      <DependentUpon>Main.cs</DependentUpon>
+    <EmbeddedResource Include="CANTool.resx">
+      <DependentUpon>CANTool.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
